--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <header>
         <div id='prova' class ="flex between">
-            <h1 class="ms-2 text1">{{ letterainiziale }}</h1></div></h1> <h3 class="text-center mt-2">VUE VUE VUE <span id="score"></span></h3>
+            <h1 class="ms-2 text1">{{ letterainiziale }}</h1>{{ Imgsample }}</div></h1> <h3 class="text-center mt-2">VUE VUE VUE <span id="score"></span></h3>
             <button class="border-round next pe-3" id="displayer">
                 <i class="fas fa-angle-down"> Gioca e divertiti con Vue</i>
             </button>
