aggiunte barzellette ai button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <!-- VUE -->
-        <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <link rel="stylesheet" href="style.css">
     <!-- JS -->
 
@@ -22,18 +22,26 @@
 
 <body>
     <header>
-        <div  id='prova' class ="flex between" >
-            <h1 class="ms-2 text1" v-bind:class="colorClass">{{ letterainiziale }}</h1> <img class="imageclassic" :src="Imgsample"> <br>
-             <h3 class="text-center mt-2">VUE VUE VUE <span id="score"></span></h3>
-            <button class="border-round next pe-3" id="displayer">
+        <div id='prova' class="flex between">
+            <h1 class="ms-2 text1" v-bind:class="colorClass">{{ letterainiziale }}</h1> <img class="imageclassic"
+                :src="Imgsample"> <br>
+            <h3 class="text-center mt-2">VUE VUE VUE <span id="score"></span></h3>
+            <button @click="welcome" class="border-round next pe-3" >
                 <i class="fas fa-angle-down"> Gioca e divertiti con Vue</i>
             </button>
-        
+            <button @click="lol" class="border-round next pe-3" >
+                <i class="fas fa-angle-down"> Gioca e divertiti con Vue ancora di piu' </i>
+            </button>
+        </div>
+
 
     </header>
-    <div class="container mt-4 mb-4" >
-        <div id="grid"><input :placeholder="traccia" type="text"> </div>
-            <!-- <div class="box">1</div>
+    <div class="container mt-4 mb-4">
+        <div id="grid"><input :placeholder="traccia" type="text" v-model="NomeeCognome"> </div>
+        <input placeholder="Metti qui nome e cognome grazie" type="text">
+    </div>
+    <input placeholder="traccia" type="text"> </div>
+    <!-- <div class="box">1</div>
         <div class="box">2</div>
         <div class="box">3</div>
         <div class="box">4</div>
